[tool.poetry]
name = "pdf-split-tool"
version = "0.3.1"
description = "Pdf Split Tool"
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/staticdev/pdf-split-tool"
repository = "https://github.com/staticdev/pdf-split-tool"
documentation = "https://pdf-split-tool.readthedocs.io"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/pdf-split-tool/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
PyPDF4 = "^1.27.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = "^0.15.0"
sphinx = "^3.2.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.7.1"
pytest-mock = "^3.3.1"
pyfakefs = "^4.1.0"
pygments = "^2.7.1"
black = "^20.8b1"
darglint = "^1.5.5"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
pre-commit-hooks = "^3.2.0"
reorder-python-imports = "^2.3.5"

[tool.poetry.scripts]
pdf-split-tool = "pdf_split_tool.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pdf_split_tool"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
