[tool.poetry]
name = "pdf-split-tool"
version = "1.0.2"
description = "Pdf Split Tool"
authors = ["Thiago Carvalho D'Ávila <thiagocavila@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/staticdev/pdf-split-tool"
repository = "https://github.com/staticdev/pdf-split-tool"
documentation = "https://pdf-split-tool.readthedocs.io"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
Changelog = "https://github.com/staticdev/pdf-split-tool/releases"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^7.0"
PyPDF4 = "^1.27.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.10.3"
mypy = "^0.790"
typeguard = "^2.10.0"
xdoctest = "^0.15.0"
sphinx = "^3.4.3"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.9.3"
pytest-mock = "^3.5.1"
pyfakefs = "^4.3.3"
pygments = "^2.7.4"
black = "^20.8b1"
darglint = "^1.5.8"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
pre-commit-hooks = "^3.4.0"
reorder-python-imports = "^2.3.6"
nox-poetry = "0.7.1"
sphinx-rtd-theme = "^0.5.1"

[tool.poetry.scripts]
pdf-split-tool = "pdf_split_tool.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pdf_split_tool"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
